[package]
name = "small-map"
version = "0.1.3"
edition = "2021"

authors = ["ChiHai <ihciah@gmail.com>"]
categories = ["data-structures"]
description = "An inline SIMD accelerated hashmap designed for small amount of data."
keywords = ["smallmap", "hashmap", "map", "simd", "smallvec"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ihciah/small-map"

[dependencies]
hashbrown = { version = "0.14", features = [
    "inline-more",
    "allocator-api2",
], default-features = false }

serde = { version = "1", default-features = false, optional = true }
ahash = { version = "0.8", default-features = false, optional = true }
rustc-hash = { version = "1", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.8" }
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph"] }

[features]
default = ["hashes"]

hashes = ["ahash", "fxhash"]
ahash = ["dep:ahash"]
fxhash = ["dep:rustc-hash"]
serde = ["dep:serde", "hashbrown/serde"]

[[bench]]
name = "simple"
harness = false
path = "benches/simple.rs"

[profile.release]
opt-level = 3
overflow-checks = false
panic = "abort"
lto = true
